- GCOMResponse::irf_spatial()

The following methods have been renamed:
- none

The arguments for the following methods have been changed:
- GModelSpatial::flux(GSkyRegion&, GEnergy&, GTime&) was
  GModelSpatial::flux(GSkyRegion*, GEnergy&, GTime&)
- GCOMObservation::drm(GSkyModel&) was GCOMObservation::drm(GSource&)

The return value of the following methods has been changed:
- none


3. Configuration
-----------------
None


4. Application module
---------------------
Corrected the computation of the elapsed CPU time in an application in case
that OpenMP is enabled (#3417).


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
Added GFitsTableCol::tscale() methods and a m_tscale member to the class that
contains the optional TSCALn keyword value (m_tscale=1 in case that no scaling
keyword is found). Upon loading of a column with m_tscale!=1 the FITS scaling
will be set to 1 and TZERO to 0 so that the values are loaded unscaled. This
assures that no information is lost. If needed, scaling of the FITS column
values has to be performed manually. The GFitsTableCol::scale() method was
removed since it won't have any effect anymore (#3553).


7. Linear algebra module
------------------------
Implemented GMatrixSparse::row() and GMatrixSparse::add_to_row() methods.


8. Model module
---------------
Added methods to GModelSpectralFunc to allow building of a file function
in memort (#3535).

Added GModelAssociation class to implement a model association and the
GModelAssociations container class to hold a list of model associations.
The GModelAssociations class was added as a member of GModel, and
GModel::associations() getter and setter methods have been implemented to
access the associations. The associations are also automatically written in
the GModel::read_attributes() and GModel::write_attributes() methods, and
the association names are displayed by GModel::print_attributes() (#3469).
