@@ -85,9 +85,9 @@ public:
     void             ewidth(const double& ewidth);
     const double&    obs_id(void) const;
     const double&    ewidth(void) const;
-    const GSkyMap&   drb(void) const;
-    const GSkyMap&   drg(void) const;
-    const GSkyMap&   drx(void) const;
+    const GCOMDri&   drb(void) const;
+    const GCOMDri&   drg(void) const;
+    const GCOMDri&   drx(void) const;
     GCOMDri          drm(const GModels& models) const;
     const GCOMTim&   tim(void) const;
     const GCOMOads&  oads(void) const;
